# orin

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  Makefile.am  README.md  SECURITY.md  configure.ac  liborinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
contrib/: README.md  orin-cli.bash  orin-tx.bash  orind.bash  valgrind.supp
depends/: Makefile  README.md  description.md  funcs.mk
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  cjdns.md  dash-conf.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  instantsend.md  managing-wallets.md  masternode-budget.md  multisig-tutorial.md  orin-conf.md  p2p-bad-ports.md  productivity.md  reduce-memory.md  reduce-traffic.md  release-notes-6389.md  release-notes-6567.md  release-notes-6579.md  release-notes-6608.md  release-notes-6665.md  (+19 more)
share/: setup.nsi.in
src/: .bear-tidy-config  Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  addressindex.cpp  addressindex.h  batchedlogger.cpp  batchedlogger.h  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-wallet.cpp  bitcoind.cpp  cachemap.h  cachemultimap.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  context.h  dbwrapper.h  dsnotificationinterface.cpp  dsnotificationinterface.h  dummywallet.cpp  flat-database.h  fs.h  hash.h  hash_x11.h  init.cpp  init.h  key.h  key_io.cpp  (+44 more)
src/orinbls/src/: CMakeLists.txt  legacy.cpp  threshold.cpp
(+891 files in other folders)
